@@ -1,5 +1,11 @@
 2007-05-25  Vincent Untz  <vuntz@gnome.org>
 
+	* panel-run-dialog.c: (program_list_selection_changed): don't reset
+	visibility of all programs in the program list. And beautify the code.
+	Fix bug #339963
+
+2007-05-25  Vincent Untz  <vuntz@gnome.org>
+
 	* panel-ditem-editor.c: (panel_ditem_editor_setup_ui): set default
 	response
 	(panel_ditem_editor_activated): emits a reponse for the dialog
